# test-ksyntax-highlight-plugin

./: CMakeLists.txt  ExampleHighlighterKSyntaxPlugin.cpp  ExampleHighlighterPlugin.cpp  ExampleHighlighterPlugin.h  README.md  SyntaxHighlightPlugin.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test-ksyntax-highlight_ru_RU.ts
